--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "concurrently \"npm run backend\" \"npm run serve\"",
+    "backend": "json-server --watch db.json"
   },
   "dependencies": {
     "axios": "^0.24.0",
-    "json-server": "^0.17.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -17,9 +18,11 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-prettier": "^6.0.0",
+    "concurrently": "^6.4.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
+    "json-server": "^0.17.0",
     "prettier": "^2.2.1",
     "vue-template-compiler": "^2.6.11"
   }
