--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vjeshala-vue",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -11,19 +11,19 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
-    "vue": "^2.6.11"
+    "vue": "^3.1.0-0"
   },
   "devDependencies": {
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/compiler-sfc": "^3.1.0-0",
     "concurrently": "^6.4.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
     "json-server": "^0.17.0",
-    "prettier": "^2.2.1",
-    "vue-template-compiler": "^2.6.11"
+    "prettier": "^2.2.1"
   }
 }
